k8s/app/subscriber/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subscriber-ingress
spec:
  rules:
    - host: subscriber.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subscriber
                port:
                  number: 8080
    - host: subscriber.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
